...
export default function AppTabs() {
  return (
    <Tabs>
      <TabList asChild>
        <TabBar>
          <TabTrigger name="discover" href="/discover" asChild>
            <TabButton>Descubrir</TabButton>
          </TabTrigger>
          <TabTrigger name="matches" href="/matches" asChild>
            <TabButton>Matches</TabButton>
          </TabTrigger>
          <TabTrigger name="profile" href="/profile" asChild>
            <TabButton>Perfil</TabButton>
          </TabTrigger>
        </TabBar>
      </TabList>
...
